start building the dashboard toolbar, colors and logout funcitonality

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -2,5 +2,9 @@ $colors: (
 	primary: #FF9800,
 	accent: #BDBDBD,
 	warn: #C62828,
-	danger: #FFEE58
+	danger: #FFEE58,
+	link: #900,
+	link_active: #900,
+	link_dark: #fff,
+	link_dark_active: #fff
 );
