styling changes and build out the toolbar

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -1,8 +1,8 @@
 $colors: (
-	primary: #FF9800,
+	primary: #263238,
 	accent: #BDBDBD,
-	warn: #C62828,
-	danger: #FFEE58,
+	danger: #C62828,
+	warn: #FFEE58,
 	link: #900,
 	link_active: #900,
 	link_dark: #fff,
