update the login and registration pages

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -1,10 +1,13 @@
 $colors: (
 	primary: #263238,
+	secondary: #00C853,
 	accent: #BDBDBD,
 	danger: #C62828,
 	warn: #FFEE58,
 	link: #900,
 	link_active: #900,
 	link_dark: #fff,
-	link_dark_active: #fff
+	link_dark_active: #fff,
+	lite_grey: #f5f5f5,
+	mid_grey: #bdbdbd,
 );
