--- a/src/assets/sass/_imports.scss
+++ b/src/assets/sass/_imports.scss
@@ -1,2 +1,5 @@
+@import './base/variables';
 @import './base/animate';
 @import './base/colors';
+@import './base/mixins';
+@import './base/styles';
