--- a/src/pages/onboard/register/register.scss
+++ b/src/pages/onboard/register/register.scss
@@ -1,28 +1,30 @@
-@import '../../../assets/sass/imports';
-
 .v-divider {
 	margin: 30px 0;
 }
 
-.header {
-	font-size: 28px;
-	justify-content: center;
-	text-align: center;
-}
+.register {
+	@include dashboardPage;
 
-.register-details {
-	padding: 10px 10px 5px;
-
-	@include breakpoint(xs) {
+	.header {
+		font-size: 28px;
 		justify-content: center;
+		text-align: center;
 	}
-}
 
-.onboard {
-	&--flex {
-		.layout {
-			@include breakpoint(xs) {
-				flex-direction: column;
+	.register-details {
+		padding: 10px 10px 5px;
+
+		@include breakpoint(xs) {
+			justify-content: center;
+		}
+	}
+
+	.onboard {
+		&-flex {
+			.layout {
+				@include breakpoint(xs) {
+					flex-direction: column;
+				}
 			}
 		}
 	}
