--- a/src/pages/onboard/login/login.scss
+++ b/src/pages/onboard/login/login.scss
@@ -9,7 +9,7 @@
 	}
 
 	.login-details {
-		padding: 10px 10px 5px;
+		@include onboardDetails();
 
 		@include breakpoint(xs) {
 			flex-direction: column;
